# pyqueue

./: README.md  pyproject.toml
src/pyqueue/: __init__.py
src/pyqueue/app/: pyqueue.py
