[project]
name = "pyqueue"
version = "0.1.0"
description = "A lightweight distributed task queue for Python using Redis as a message broker"
readme = "README.md"
authors = [
    { name = "Carlos Gamino", email = "carlos.alfredo55@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "redis>=7.2.0",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.pyrefly]
